--- a/MVCDemo/Views/Account/Login.cshtml
+++ b/MVCDemo/Views/Account/Login.cshtml
@@ -21,13 +21,13 @@
             <div class="form-group">
                 <label for="inputEmail" class="col-sm-2 control-label">Email</label>
                 <div class="col-sm-10">
-                    <input type="email" class="form-control" id="inputEmail" placeholder="Email">
+                    <input type="email" class="form-control" id="inputEmail" name="inputEmail" placeholder="Email">
                 </div>
             </div>
             <div class="form-group">
                 <label for="inputPassword" class="col-sm-2 control-label">Password</label>
                 <div class="col-sm-10">
-                    <input type="password" class="form-control" id="inputPassword" placeholder="Password">
+                    <input type="password" class="form-control" id="inputPassword" name="inputPassword" placeholder="Password">
                 </div>
             </div>
             <div class="form-group">
