--- a/MVCDemo/Views/Account/Index.cshtml
+++ b/MVCDemo/Views/Account/Index.cshtml
@@ -1,8 +1,8 @@
-﻿
+﻿@model IEnumerable<MVCDemo.Models.SysUser>
+
 @{
     Layout = null;
 }
-
 <!DOCTYPE html>
 
 <html>
@@ -12,7 +12,13 @@
 </head>
 <body>
     <div> 
-        Hello,World!
+        <table>
+            <tr>
+                <th>
+                    
+                </th>
+            </tr>
+        </table>
     </div>
 </body>
 </html>
