--- a/MVCDemo/Views/Account/Index.cshtml
+++ b/MVCDemo/Views/Account/Index.cshtml
@@ -15,9 +15,27 @@
         <table>
             <tr>
                 <th>
-                    
+                    @Html.DisplayNameFor(model => model.UserName)
                 </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Email)
+                </th>
+                <th></th>
             </tr>
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem=> item.UserName)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem=>item.Email)
+                    </td>
+                    <td>
+                        @Html.ActionLink("Details", "Details", new { id=item.ID})
+                    </td>
+                </tr>
+            }
         </table>
     </div>
 </body>
