--- a/MVCDemo/Views/Account/Login.cshtml
+++ b/MVCDemo/Views/Account/Login.cshtml
@@ -9,7 +9,7 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>Login</title>
-    <link href="/css/bootstrap.css" rel="stylesheet" />
+    <link href="~/Content/bootstrap.css" rel="stylesheet" />
 </head>
 <body>
     <div id="loginState">
